<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d20dp"
            android:background="@drawable/background_red_social_signup">

            <include
                android:id="@+id/toolbar_login"
                layout="@layout/tool_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="72dp"
                android:text="@string/welcome"
                android:textSize="@dimen/d40sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="@dimen/d20dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/blue_1200"
                android:drawableStart="@drawable/ic_action_email"
                android:hint="@string/usuario"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue_1200"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_user_login"
                app:passwordToggleEnabled="true"
                android:backgroundTint="@color/blue_1200"
                app:passwordToggleTint="@color/blue_1200">

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d20dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="@dimen/d20dp"
                    android:autofillHints="password"
                    android:backgroundTint="@color/blue_1200"
                    android:drawableStart="@drawable/ic_action_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/blue_1200" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/blue_1200"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <Button
                android:id="@+id/btn_user_login_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounder_blue_button"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@drawable/text_color_change_effect"
                android:textSize="@dimen/d20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_user_login_main">

                <View
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d20dp"
                    android:layout_marginEnd="@dimen/d20dp"
                    android:text="@string/or"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/d20sp" />

                <View
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_signup_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounder_blue_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@drawable/text_color_change_effect"
                android:textSize="@dimen/d20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>