<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_red_social_signup"
            android:padding="@dimen/d20dp">

            <include
                android:id="@+id/toolbar_account"
                layout="@layout/tool_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="56dp"
                android:text="@string/create_account"
                android:textSize="@dimen/d40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_selfie"
                android:layout_width="@dimen/d100dp"
                android:layout_height="@dimen/d100dp"
                android:layout_marginTop="172dp"
                android:background="@drawable/ic_action_selfie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewaccount" />

            <EditText
                android:id="@+id/edt_name_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/blue_1200"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/name"
                android:textColor="@color/blue_1200"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_selfie"
                android:layout_marginEnd="@dimen/d20dp"
                android:layout_marginStart="@dimen/d20dp"/>

            <EditText
                android:id="@+id/edt_app_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/d20dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/blue_1200"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/last_name"
                android:textColor="@color/blue_1200"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name_account" />

            <EditText
                android:id="@+id/edt_user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/d20dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/blue_1200"
                android:drawableStart="@drawable/ic_action_email"
                android:hint="@string/usuario"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue_1200"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_app_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/d20dp"
                android:backgroundTint="@color/blue_1200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_user_login"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue_1200">

                <EditText
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:autofillHints="password"
                    android:backgroundTint="@color/blue_1200"
                    android:drawableStart="@drawable/ic_action_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/blue_1200" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounder_blue_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@drawable/text_color_change_effect"
                android:textSize="@dimen/d20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_main">

                <View
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/d20dp"
                    android:layout_marginEnd="@dimen/d20dp"
                    android:text="@string/or"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/d20sp" />

                <View
                    android:layout_width="170dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <Button
                android:id="@+id/tv_user_login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounder_blue_button"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@drawable/text_color_change_effect"
                android:textSize="@dimen/d20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>